--- a/aira/pyproject.toml
+++ b/aira/pyproject.toml
@@ -10,9 +10,8 @@ root = ".."
 name = "aiq_aira"
 dynamic = ["version"]
 dependencies = [
-  "jwt",
-  "agentiq>=1.1.0a1",
   "agentiq-langchain>=1.1.0a1",
+  "agentiq>=1.1.0a1",
   "aiohappyeyeballs==2.4.4",
   "aiohttp",
   "aiosignal==1.3.2",
@@ -23,37 +22,41 @@ dependencies = [
   "attrs==25.1.0",
   "certifi==2025.1.31",
   "charset-normalizer==3.4.1",
+  "colorama",
   "distro==1.9.0",
   "exceptiongroup==1.2.2",
   "frozenlist==1.5.0",
   "h11>=0.16.0",
   "httpcore",
   "httpx",
-  "litellm",
   "idna==3.10",
   "jiter==0.8.2",
   "jsonpatch==1.33",
   "jsonpointer==3.0.0",
   "langchain-core",
-  "langchain-openai",
   "langchain-nvidia-ai-endpoints",
-  "langgraph==0.2.69",
+  "langchain-openai",
   "langgraph-checkpoint==2.0.10",
   "langgraph-sdk==0.1.51",
+  "langgraph==0.2.69",
   "langsmith==0.3.4",
+  "litellm",
   "msgpack==1.1.0",
   "multidict==6.1.0",
   "openai==1.61.0",
+  "openinference-instrumentation-langchain",
+  "openinference-instrumentation-openai",
   "orjson==3.10.15",
   "packaging==24.2",
   "propcache==0.2.1",
-  "pydantic",
   "pydantic_core",
+  "pydantic",
+  "pyjwt==2.11.0",
   "PyYAML==6.0.2",
   "redis==5.2.1",
   "regex==2024.11.6",
-  "requests==2.32.3",
   "requests-toolbelt==1.0.0",
+  "requests==2.32.3",
   "sniffio==1.3.1",
   "tenacity==9.0.0",
   "tiktoken==0.8.0",
@@ -63,9 +66,6 @@ dependencies = [
   "xmltodict==0.14.2",
   "yarl==1.18.3",
   "zstandard==0.23.0",
-  "colorama",
-  "openinference-instrumentation-langchain",
-  "openinference-instrumentation-openai",
 ]
 requires-python = ">=3.12"
 description = "AIRA AI-Q example"
