--- a/aira/Dockerfile
+++ b/aira/Dockerfile
@@ -43,3 +43,5 @@ ENV SETUPTOOLS_SCM_PRETEND_VERSION_FOR_AIQ_AIRA="0.0.0"
 RUN uv pip install /app 
 
 RUN chmod +x /entrypoint.sh
+
+ENTRYPOINT ["/entrypoint.sh"]
