--- a/aira/pyproject.toml
+++ b/aira/pyproject.toml
@@ -10,8 +10,8 @@ root = ".."
 name = "aiq_aira"
 dynamic = ["version"]
 dependencies = [
-  "agentiq-langchain>=1.1.0a1",
-  "agentiq>=1.1.0a1",
+  "aiqtoolkit-langchain>=1.1.0a1",
+  "aiqtoolkit>=1.1.0a1",
   "aiohappyeyeballs==2.4.4",
   "aiohttp",
   "aiosignal==1.3.2",
@@ -51,7 +51,7 @@ dependencies = [
   "propcache==0.2.1",
   "pydantic_core",
   "pydantic",
-  "pyjwt==2.11.0",
+  "pyjwt",
   "PyYAML==6.0.2",
   "redis==5.2.1",
   "regex==2024.11.6",
