remove dev box hardcoding

--- a/aira/configs/config.yml
+++ b/aira/configs/config.yml
@@ -48,7 +48,7 @@ llms:
     _type: nim
     model_name: meta/llama-3.3-70b-instruct
     temperature: 0.0
-    base_url: http://10.185.119.221:8050/v1
+    base_url: http://nim-llm-ms:8000/v1
     api_key: not-needed
   # The reasoning llm is used for report planning and reflection and should be a reasoning model
   # that supports thinking tokens. The default configuration below is used assuming a docker compose
@@ -58,7 +58,7 @@ llms:
     _type: nim
     model_name : nvidia/llama-3.3-nemotron-super-49b-v1
     temperature: 0.5
-    base_url: http://10.185.119.221:8999/v1 # default if deployed using RAG blueprint and docker compose
+    base_url: http://aira-instruct-llm:8000/v1 # default if deployed using RAG blueprint and docker compose
     max_tokens: 5000
     stream: true
     api_key: not-needed
@@ -71,7 +71,7 @@ functions:
   generate_summary:
     _type: generate_summaries
     # update to the IP address of the RAG server if you are not deploying RAG with docker compose
-    rag_url: http://10.185.119.221:8081/v1 
+    rag_url: http://rag-server:8081/v1 
     eci_search_tool_name: eci_search
   
   eci_search:
@@ -89,7 +89,7 @@ functions:
     _type: artifact_qa
     llm_name: instruct_llm
     # update to the IP address of the RAG server if you are not deploying RAG with docker compose
-    rag_url: http://10.185.119.221:8081/v1
+    rag_url: http://rag-server:8081/v1
     eci_search_tool_name: eci_search
   
   health_check:
