--- a/aira/configs/config.yml
+++ b/aira/configs/config.yml
@@ -38,6 +38,10 @@ general:
         method: GET
         description: Get the default collections
         function_name: default_collections
+      - path: /eci_source_list
+        method: GET
+        description: Get the list of ECI sources
+        function_name: eci_source_list
 
 llms:
   # The inst_llm is used for Q&A and report writing and should be an instruct model.
@@ -94,6 +98,9 @@ functions:
   
   health_check:
     _type: health_check
+
+  eci_source_list:
+    _type: eci_source_list
 
   default_collections:
     _type: default_collections
