--- a/aira/configs/config.yml
+++ b/aira/configs/config.yml
@@ -42,6 +42,10 @@ general:
         method: GET
         description: Get the list of ECI sources
         function_name: eci_source_list
+      - path: /default_prompt
+        method: GET
+        description: Get the default prompt
+        function_name: default_prompt
 
 llms:
   # The inst_llm is used for Q&A and report writing and should be an instruct model.
@@ -101,6 +105,10 @@ functions:
 
   eci_source_list:
     _type: eci_source_list
+
+  default_prompt:
+    _type: default_prompt
+    # can set report_structure and report_topic here
 
   default_collections:
     _type: default_collections
