--- a/aira/pyproject.toml
+++ b/aira/pyproject.toml
@@ -10,8 +10,10 @@ root = ".."
 name = "aiq_aira"
 dynamic = ["version"]
 dependencies = [
-  "aiqtoolkit-langchain>=1.1.0a1",
-  "aiqtoolkit>=1.1.0a1",
+  "agentiq>=1.2.0a20250703",
+  "agentiq-langchain>=1.2.0a20250703",
+  "aiqtoolkit-weave==1.2.0a20250703",
+  "aiqtoolkit-langchain==1.2.0a20250703",
   "aiohappyeyeballs==2.4.4",
   "aiohttp",
   "aiosignal==1.3.2",
@@ -34,12 +36,13 @@ dependencies = [
   "jsonpatch==1.33",
   "jsonpointer==3.0.0",
   "langchain-core",
-  "langchain-nvidia-ai-endpoints",
   "langchain-openai",
+  "langchain-nvidia-ai-endpoints",
+  "langgraph==0.2.69",
   "langgraph-checkpoint==2.0.10",
   "langgraph-sdk==0.1.51",
   "langgraph==0.2.69",
-  "langsmith==0.3.4",
+  "langsmith==0.4.4",
   "litellm",
   "msgpack==1.1.0",
   "multidict==6.1.0",
@@ -63,6 +66,9 @@ dependencies = [
   "tqdm==4.67.1",
   "typing_extensions==4.12.2",
   "urllib3==2.3.0",
+  "weave==0.51.55",
+  "wandb<0.21.0",  # pin for compatibility with weave 0.51.x (uses gql 3.x)
+  "gql<4",  # keep GraphQL client version compatible
   "xmltodict==0.14.2",
   "yarl==1.18.3",
   "zstandard==0.23.0",
@@ -85,6 +91,11 @@ dev = [
   "pytest-dotenv>=0.5.2",
   "yapf==0.43.*",
 ]
+weave = [
+    "wandb<0.21.0",
+    "gql<4"
+]
+
 
 [tool.uv.sources]
 aiq = { path = "../ai-query-engine", editable = true }
