--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
     rev: 5.12.0
     hooks:
       - id: isort
-        args: ["--filter-files", "--settings-file=./aira/pyproject.toml"]
+        args: ["--filter-files", "--settings-file=./pyproject.toml"]
 
   # - repo: https://github.com/PyCQA/flake8
   #   rev: 7.0.0
@@ -26,20 +26,18 @@ repos:
   #     - id: flake8
   #       entry: pflake8
   #       additional_dependencies: [pyproject-flake8]
-  #       args: ["--config=./aira/pyproject.toml"]
+  #       args: ["--config=./pyproject.toml"]
 
   - repo: https://github.com/google/yapf
     rev: v0.43.0
     hooks:
       - id: yapf
-        args: ["-i", "--style", "./aira/pyproject.toml"]
+        args: ["-i", "--style", "./pyproject.toml"]
 
   - repo: https://github.com/astral-sh/uv-pre-commit
     rev: 0.6.2
     hooks:
       - id: uv-lock
-        files: aira/pyproject.toml
-        args: ["--project", "aira"]
 
   - repo: https://github.com/tcort/markdown-link-check
     rev: v3.12.2
