Update GitLab CI configuration to use 'uv sync' for package installation
Signed-off-by: Michael Demoret <mdemoret@nvidia.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ default:
     - pip install uv
     - uv venv --seed .venv
     - source .venv/bin/activate
-    - uv pip install -e "./aira[dev]"
+    - uv sync --all-groups --all-extras
 
     # Ensure Git LFS is installed
     - conda install git-lfs -y
