--- a/aira/configs/eval_config.yml
+++ b/aira/configs/eval_config.yml
@@ -23,6 +23,16 @@ general:
         method: GET
         description: Get the default collections
         function_name: default_collections
+      - path: /eci_source_list
+        method: GET
+        description: Get the list of ECI sources
+        function_name: eci_source_list
+      - path: /default_prompt
+        method: GET
+        description: Get the default prompt
+        function_name: default_prompt
+
+        
   telemetry:
     logging:
       console:
@@ -31,7 +41,7 @@ general:
     tracing:
       weave:
         _type: weave
-        project: "nat-evaluators-test3"
+        project: "nat-evaluators-test" # Name of the project in weave, runs will be grouped under this project name
 
 llms:
   # The inst_llm is used for Q&A and report writing and should be an instruct model.
@@ -53,12 +63,10 @@ llms:
     model_name : nvidia/llama-3.3-nemotron-super-49b-v1
     temperature: 0.5
     base_url: https://integrate.api.nvidia.com/v1
-    # stream: false
-    disable_streaming: false # Disable streaming to prevent truncation issues
+    disable_streaming: false # Disable streaming with nim models
     api_key: ${NVIDIA_API_KEY}  # Uncomment this for hosted endpoint
     max_tokens: 5000  
-    # top_p: 0.9  # Add top_p parameter for better sampling
-    # seed: 42  # Add seed for deterministic results
+
   eval_llm:
     _type: nim
     model_name: meta/llama-3.1-70b-instruct
@@ -80,17 +88,38 @@ functions:
 
   generate_summary:
     _type: generate_summaries
-    # update to the IP address of the RAG server if you are not deploying RAG with docker compose (using one of our endpoints for now)
-    rag_url: http://10.185.119.221:8081/v1
+    # update to the IP address of the RAG server if you are not deploying RAG with docker compose
+    rag_url: http://rag-server:8081/v1
+    eci_search_tool_name: eci_search
+
+  eci_search:
+    _type: eci_search
+    use_prod: False
+    default_data_sources:
+      - "sharepoint"
+      - "confluence"
+      - "nvidiadocs"
+      - "nvidiablogs"
+      - "nvidianews"
+    default_query_size: 2
 
   artifact_qa:
     _type: artifact_qa
     llm_name: instruct_llm
     # update to the IP address of the RAG server if you are not deploying RAG with docker compose (using one of our endpoints for now)
-    rag_url: http://10.185.119.221:8081/v1
+    rag_url: http://rag-server:8081/v1
+    eci_search_tool_name: eci_search
     
   health_check:
     _type: health_check
+
+  eci_source_list:
+    _type: eci_source_list
+    eci_search_tool_name: eci_search
+
+  default_prompt:
+    _type: default_prompt
+    # can set report_structure and report_topic here
 
   default_collections:
     _type: default_collections
@@ -109,7 +138,7 @@ workflow:
     _type: full
     verbose: true
     fact_extraction_llm: nvdev/meta/llama-3.1-70b-instruct
-    citation_pairing_llm: gpt-4o-20241120 # Configurable LLM for citation pairing
+    citation_pairing_llm: nvdev/mistralai/mixtral-8x22b-instruct-v0.1 #gpt-4o-20241120 # Configurable LLM for citation pairing use gpt for best results (high chance of rate limiting), would recommend mistral for efficiency for now
 
 
 # Evaluation configuration
@@ -117,16 +146,16 @@ eval:
   general:
     output_dir: ./.tmp/aiq_aira/
     cleanup: true
-    workflow_alias: "tester_for_sean_eci"
+    workflow_alias: "tester_for_sean_eci" # This will set the run name in weave and where each individual run will be stored under this name
 
     dataset:
       _type: json
-      file_path: data/eval_dataset_processed.json
+      file_path: data/eval_dataset.json
       id_key: id
       structure:
         disable: true
     profiler:
-     base_metrics: false  # Disable to prevent runtime metrics errors with --skip_workflow
+     base_metrics: true
 
   evaluators:
     coverage:
