--- a/deploy/workbench/docker-compose.yaml
+++ b/deploy/workbench/docker-compose.yaml
@@ -61,10 +61,17 @@ services:
       AIRA_APPLY_GUARDRAIL: "false"
       OPENAI_API_KEY: ${NVIDIA_API_KEY:-your-nvidia-api-key}
       AIRA_HOSTED_NIMS: ${AIRA_HOSTED_NIMS:-true}
+      # Redis configuration for session management
+      REDIS_HOST: rag-redis
+      REDIS_PORT: 6379
+      SESSION_TIMEOUT_HOURS: ${SESSION_TIMEOUT_HOURS:-24}
     volumes:
       - ../../aira/configs:/app/configs
     networks:
       - nvidia-rag
+    depends_on:
+      rag-redis:
+        condition: service_healthy
     profiles: ["aira-no-gpu"]
 
   aira-backend-gpu: 
@@ -117,6 +124,22 @@ services:
     networks:
       - nvidia-rag
     profiles: ["load-default-files"]
+
+  # Redis for session TTL tracking
+  rag-redis:
+    image: redis:7-alpine
+    container_name: rag-redis
+    ports:
+      - "6379:6379"
+    command: redis-server --save "" --appendonly no
+    networks:
+      - nvidia-rag
+    profiles: ["aira-no-gpu", "aira-gpu"]
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 # Use the nvidia-rag network created by the 
 # RAG docker compose deployment
