Refactor Dockerfile and Nginx configurations for improved Redis persistence and routing
- Updated Dockerfile to copy all project files into the container and install dependencies.
- Enhanced Redis service in Docker Compose files to enable data persistence with AOF and volume mapping.
- Modified Nginx configuration to streamline proxy pass directives and added rewrite rules for cleaner URL handling.

--- a/deploy/compose/docker-compose.yaml
+++ b/deploy/compose/docker-compose.yaml
@@ -81,7 +81,10 @@ services:
     container_name: rag-redis
     ports:
       - "6379:6379"
-    command: redis-server --save "" --appendonly no
+    # Enable persistence: save every 60s if 1+ keys changed, AOF enabled
+    command: redis-server --save 60 1 --appendonly yes
+    volumes:
+      - rag-redis-data:/data
     networks:
       - nvidia-rag
     profiles: ["aira"]
@@ -118,3 +121,7 @@ networks:
   nvidia-rag:
     external: false
     name: nvidia-rag
+
+# Persistent volumes
+volumes:
+  rag-redis-data:
