Enhance collection management in AIRA by checking for existing collections before creation
- Updated the POST /collections endpoint to verify existing collections in Redis, creating only new ones.
- Improved logging for existing and new collections during the creation process.
- Adjusted the response structure to reflect successful existing collections alongside newly created ones.
- Updated configuration to use specific IP addresses for RAG server connections.

--- a/aira/configs/config.yml
+++ b/aira/configs/config.yml
@@ -48,7 +48,7 @@ general:
         function_name: default_prompt
       - path: /collections
         method: POST
-        description: Create RAG collections with session tracking
+        description: Check if collections exist and create new ones if they don't, and track them for automatic cleanup
         function_name: post_collections
 
   telemetry:
