Refactor RAG URL configuration and cleanup functions for consistency
- Updated configuration to rename `rag_url` to `rag_ingest_url` for clarity.
- Modified functions to use the new `rag_ingest_url` parameter for RAG collection management.
- Adjusted Docker Compose file to standardize Redis service naming and configuration.
- Enhanced logging and error handling in collection cleanup processes.

--- a/aira/configs/config.yml
+++ b/aira/configs/config.yml
@@ -132,7 +132,7 @@ functions:
 
   post_collections:
     _type: post_collections
-    rag_url: http://rag-server:8082/v1
+    rag_ingest_url: http://ingestor-server:8082/v1
 
 workflow:
   _type: ai_researcher
