--- a/deploy/workbench/docker-compose.yaml
+++ b/deploy/workbench/docker-compose.yaml
@@ -62,7 +62,7 @@ services:
       OPENAI_API_KEY: ${NVIDIA_API_KEY:-your-nvidia-api-key}
       AIRA_HOSTED_NIMS: ${AIRA_HOSTED_NIMS:-true}
       # Redis configuration for session management
-      REDIS_HOST: rag-redis
+      REDIS_HOST: redis
       REDIS_PORT: 6379
       SESSION_TIMEOUT_HOURS: ${SESSION_TIMEOUT_HOURS:-24}
     volumes:
@@ -70,7 +70,7 @@ services:
     networks:
       - nvidia-rag
     depends_on:
-      rag-redis:
+      redis:
         condition: service_healthy
     profiles: ["aira-no-gpu"]
 
@@ -126,15 +126,15 @@ services:
     profiles: ["load-default-files"]
 
   # Redis for session TTL tracking
-  rag-redis:
+  redis:
     image: redis:7-alpine
-    container_name: rag-redis
+    container_name: redis
     ports:
       - "6379:6379"
     # Enable persistence: save every 60s if 1+ keys changed, AOF enabled
     command: redis-server --save 60 1 --appendonly yes
     volumes:
-      - rag-redis-data:/data
+      - redis-data:/data
     networks:
       - nvidia-rag
     profiles: ["aira-no-gpu", "aira-gpu"]
@@ -155,4 +155,4 @@ networks:
 
 # Persistent volumes
 volumes:
-  rag-redis-data:
+  redis-data:
