--- a/deploy/compose/docker-compose.yaml
+++ b/deploy/compose/docker-compose.yaml
@@ -113,6 +113,20 @@ services:
       - nvidia-rag
     profiles: ["aira"]
 
+  aira-frontend:
+    container_name: aira-frontend
+    image: nvcr.io/nvidia/blueprint/aira-frontend:v1.1.0
+    ports:
+      - "3001:3001"
+    expose:
+      - "3001"
+    networks:
+      - nvidia-rag
+    environment:
+      NVWB_TRIM_PREFIX: true
+      INFERENCE_ORIGIN: ${INFERENCE_ORIGIN:-http://aira-nginx:8051}
+    profiles: ["aira"]
+
 # Use the nvidia-rag network created by the 
 # RAG docker compose deployment
 # If you are deploying RAG separately
