--- a/deploy/compose/docker-compose.yaml
+++ b/deploy/compose/docker-compose.yaml
@@ -63,28 +63,28 @@ services:
       OPENAI_API_KEY: ${NVIDIA_API_KEY:-your-nvidia-api-key}
       AIRA_HOSTED_NIMS: ${AIRA_HOSTED_NIMS:-false}
       # Redis configuration for session management
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
+      REDIS_HOST: aira-redis
+      REDIS_PORT: 6380
       SESSION_TIMEOUT_HOURS: ${SESSION_TIMEOUT_HOURS:-24}
     volumes:
       - ../../aira/configs:/app/configs
     networks:
       - nvidia-rag
     depends_on:
-      redis:
+      aira-redis:
         condition: service_healthy
     profiles: ["aira"]
 
   # Redis for session TTL tracking
-  redis:
+  aira-redis:
     image: redis:7-alpine
-    container_name: redis
+    container_name: aira-redis
     ports:
-      - "6379:6379"
+      - "6380:6379"
     # Enable persistence: save every 60s if 1+ keys changed, AOF enabled
     command: redis-server --save 60 1 --appendonly yes
     volumes:
-      - redis-data:/data
+      - aira-redis-data:/data
     networks:
       - nvidia-rag
     profiles: ["aira"]
@@ -138,4 +138,4 @@ networks:
 
 # Persistent volumes
 volumes:
-  redis-data:
+  aira-redis-data:
