--- a/deploy/compose/docker-compose.yaml
+++ b/deploy/compose/docker-compose.yaml
@@ -48,7 +48,6 @@ services:
   aira-backend:
     container_name: aira-backend
     image: nvcr.io/nvidia/blueprint/aira-backend:v1.1.0
-    runtime: nvidia
     build:
       context: ../../
       dockerfile: deploy/Dockerfile
@@ -65,9 +64,15 @@ services:
       # Required for rag middleware via fastapi extensions
       RAG_INGEST_URL: ${RAG_INGEST_URL:-http://rag-server:8082/v1}
       # Redis configuration for session management
-      REDIS_HOST: aira-redis
-      REDIS_PORT: 6380
+      REDIS_HOST: ${REDIS_HOST:-aira-redis}
+      REDIS_PORT: ${REDIS_PORT:-6380}
       SESSION_TIMEOUT_HOURS: ${SESSION_TIMEOUT_HOURS:-24}
+      AIQ_SSA_CLIENT_ID: ${AIQ_SSA_CLIENT_ID:-nvssa-prd-the-client-id}
+      AIQ_SSA_CLIENT_SECRET: ${AIQ_SSA_CLIENT_SECRET:-ssa-prod-secret}
+      RAG_SERVER_URL: ${RAG_SERVER_URL:-http://rag-server:8081/v1}
+      INSTRUCT_LLM_BASE_URL: ${INSTRUCT_LLM_BASE_URL:-http://aira-instruct-llm:8000/v1}
+      NEMOTRON_LLM_BASE_URL: ${NEMOTRON_LLM_BASE_URL:-http://nim-llm-ms:8000/v1}
+
     volumes:
       - ../../configs:/app/configs
     networks:
@@ -101,14 +106,23 @@ services:
     container_name: aira-frontend
     image: nvcr.io/nvidia/blueprint/aira-frontend:v1.1.0
     ports:
-      - "3001:3001"
+      - "3000:3000"
     expose:
-      - "3001"
+      - "3000"
     networks:
       - nvidia-rag
     environment:
       NVWB_TRIM_PREFIX: true
       INFERENCE_ORIGIN: ${INFERENCE_ORIGIN:-http://aira-backend:3838}
+      STARFLEET_CLIENT_ID: ${AIQ_STARFLEET_CLIENT_ID:-starfleet-prd-web-client-id}
+      AUTH_PROCESS: ${AUTH_PROCESS:-starfleet}
+      # Starfleet Authentication Configuration
+      NEXTAUTH_URL: ${NEXTAUTH_URL:-http://localhost:3000}
+      STARFLEET_AUTHORIZATION_ENDPOINT: ${STARFLEET_AUTHORIZATION_ENDPOINT:-https://login.nvidia.com/authorize}
+      STARFLEET_WELL_KNOWN_URL: ${STARFLEET_WELL_KNOWN_URL:-https://login.nvidia.com/.well-known/openid-configuration}
+      STARFLEET_TOKEN_ENDPOINT: ${STARFLEET_TOKEN_ENDPOINT:-https://login.nvidia.com/token}
+      STARFLEET_REDIRECT_URI: ${STARFLEET_REDIRECT_URI:-http://localhost:3000/api/auth/callback/nvlogin}
+      # Common Configuration
     profiles: ["aira"]
 
 # Use the nvidia-rag network created by the
