add top level requirements file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,10 +45,10 @@ dependencies = [
   "langgraph-sdk==0.1.51",
   "langgraph==0.2.69",
   "langsmith==0.3.4",
-  "litellm",
+  "litellm~=1.74.3",
   "msgpack==1.1.0",
   "multidict==6.1.0",
-  "openai==1.61.0",
+  "openai~=1.68.2",
   "openinference-instrumentation-langchain",
   "openinference-instrumentation-openai",
   "orjson==3.10.15",
