--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,10 +56,12 @@ dependencies = [
   "orjson==3.10.15",
   "packaging==24.2",
   "propcache==0.2.1",
+  "pyarrow>=15.0.0",
   "pydantic_core",
   "pydantic",
   "pyjwt==2.10.1",
   "PyYAML==6.0.2",
+  "ragas>=0.1.0",
   "redis==5.2.1",
   "regex==2024.11.6",
   "requests-toolbelt==1.0.0",
