--- a/deploy/workbench/docker-compose.yaml
+++ b/deploy/workbench/docker-compose.yaml
@@ -12,6 +12,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+
 services:
   aira-instruct-llm:
     container_name: aira-instruct-llm
@@ -33,7 +34,7 @@ services:
             - driver: nvidia
               # RAG uses 0,1 so we assign 2,3 to the LLM
               device_ids: ['${AIRA_LLM_MS_GPU_ID_0:-2}', '${AIRA_LLM_MS_GPU_ID_1:-3}']
-              capabilities: [gpu] 
+              capabilities: [gpu]
     healthcheck:
       test: ["CMD", "python3", "-c", "import requests; requests.get('http://localhost:8000/v1/health/ready')"]
       interval: 30s
@@ -49,7 +50,7 @@ services:
     image: nvcr.io/nvidia/blueprint/aira-backend:v1.0.0
     build:
       context: ../../
-      dockerfile: aira/Dockerfile
+      dockerfile: deploy/Dockerfile
     entrypoint: "/entrypoint.sh"
     ports:
       - "3838:3838"
@@ -61,12 +62,12 @@ services:
       OPENAI_API_KEY: ${NVIDIA_API_KEY:-your-nvidia-api-key}
       AIRA_HOSTED_NIMS: ${AIRA_HOSTED_NIMS:-true}
     volumes:
-      - ../../aira/configs:/app/configs
+      - ../../configs:/app/configs
     networks:
       - nvidia-rag
     profiles: ["aira-no-gpu"]
 
-  aira-backend-gpu: 
+  aira-backend-gpu:
     <<: *aira-backend-no-gpu
     environment:
       AIRA_HOSTED_NIMS: ${AIRA_HOSTED_NIMS:-false}
