--- a/configs/eval_config.yml
+++ b/configs/eval_config.yml
@@ -56,7 +56,7 @@ general:
     tracing:
       weave:
         _type: weave
-        project: "nat-evaluators-test" # Name of the project in weave, runs will be grouped under this project name
+        project: "nat-evaluators-for-mr" # Name of the project in weave, runs will be grouped under this project name
 
 llms:
   # The inst_llm is used for Q&A and report writing and should be an instruct model.
@@ -104,7 +104,7 @@ functions:
   generate_summary:
     _type: generate_summaries
     # update to the IP address of the RAG server if you are not deploying RAG with docker compose
-    rag_url: http://rag-server:8081/v1
+    rag_url: http://10.185.119.221:8081/v1
     eci_search_tool_name: eci_search
 
   eci_search:
@@ -122,7 +122,7 @@ functions:
     _type: artifact_qa
     llm_name: instruct_llm
     # update to the IP address of the RAG server if you are not deploying RAG with docker compose (using one of our endpoints for now)
-    rag_url: http://rag-server:8081/v1
+    rag_url: http://10.185.119.221:8081/v1
     eci_search_tool_name: eci_search
     
   health_check:
@@ -161,11 +161,11 @@ eval:
   general:
     output_dir: ./.tmp/aiq_aira/
     cleanup: true
-    workflow_alias: "tester_for_sean_eci" # This will set the run name in weave and where each individual run will be stored under this name
+    workflow_alias: "Test_run" # This will set the run name in weave and where each individual run will be stored under this name
 
     dataset:
       _type: json
-      file_path: data/eval_dataset.json
+      file_path: data/eval_dataset_processed.json
       id_key: id
       structure:
         disable: true
